cloudformation/ecs-stack.yml
AWSTemplateFormatVersion: "2010-09-09"
Description: "ecs fargate app stack: deploys flask app in ecs fargate using resources from the network stack"

Parameters:
  project:
    Type: String
    Default: mane
  environment:
    Type: String
    Default: dev
  owner:
    Type: String
    Default: sachin
  region:
    Type: String
    Description: "aws region where the resources will be deployed"
    Default: ap-south-1
    AllowedValues:
      - ap-south-1
      - us-east-1
      - us-west-1
      - eu-west-1
    ConstraintDescription: "please select a valid aws region"

Resources:

  ECSCluster:
    Type: AWS::ECS::Cluster
    Properties:
      ClusterName: !Sub "${project}-${environment}-ecs-cluster"
      Tags:
        - Key: project
          Value: !Ref project
        - Key: environment
          Value: !Ref environment
        - Key: owner
          Value: !Ref owner

  TaskExecutionRole:
    Type: AWS::IAM::Role
    Properties:
      RoleName: !Sub "${project}-${environment}-app-task-execution-role"
      AssumeRolePolicyDocument:
        Version: "2012-10-17"
        Statement:
          - Effect: Allow
            Principal:
              Service: ecs-tasks.amazonaws.com
            Action: sts:AssumeRole
      ManagedPolicyArns:
        - arn:aws:iam::aws:policy/service-role/AmazonECSTaskExecutionRolePolicy
      Tags:
        - Key: project
          Value: !Ref project
        - Key: environment
          Value: !Ref environment
        - Key: owner
          Value: !Ref owner

  LogGroup:
    Type: AWS::Logs::LogGroup
    Properties:
      LogGroupName: !Sub "/ecs/${project}-${environment}-app"
      RetentionInDays: 7
      Tags:
        - Key: project
          Value: !Ref project
        - Key: environment
          Value: !Ref environment
        - Key: owner
          Value: !Ref owner

  TaskDefinition:
    Type: AWS::ECS::TaskDefinition
    Properties:
      Family: !Sub "${project}-${environment}-app-task-def"
      RequiresCompatibilities: [ FARGATE ]
      Cpu: '256'
      Memory: '512'
      NetworkMode: awsvpc
      ExecutionRoleArn: !GetAtt TaskExecutionRole.Arn
      ContainerDefinitions:
        - Name: !Sub "${project}-${environment}-container"
          Image: !Sub "${AWS::AccountId}.dkr.ecr.${AWS::Region}.amazonaws.com/${project}-${environment}-ecr-repo:latest"
          PortMappings:
            - ContainerPort: 5000
              Protocol: tcp
          LogConfiguration:
            LogDriver: awslogs
            Options:
              awslogs-group: !Ref LogGroup
              awslogs-region: !Ref AWS::Region
              awslogs-stream-prefix: ecs

  ALBSecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupName: !Sub "${project}-${environment}-alb-sg"
      GroupDescription: "allow http from internet to alb"
      VpcId: !ImportValue
        Fn::Sub: "${project}-${environment}-vpc-id"
      SecurityGroupIngress:
        - IpProtocol: tcp
          FromPort: 80
          ToPort: 80
          CidrIp: 0.0.0.0/0
      Tags:
        - Key: project
          Value: !Ref project
        - Key: environment
          Value: !Ref environment
        - Key: owner
          Value: !Ref owner

  AppSecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupName: !Sub "${project}-${environment}-app-sg"
      GroupDescription: "allow inbound traffic from alb"
      VpcId: !ImportValue
        Fn::Sub: "${project}-${environment}-vpc-id"
      SecurityGroupIngress:
        - Description: "allow traffic from alb"
          IpProtocol: tcp
          FromPort: 5000
          ToPort: 5000
          SourceSecurityGroupId: !GetAtt ALBSecurityGroup.GroupId
      Tags:
        - Key: project
          Value: !Ref project
        - Key: environment
          Value: !Ref environment
        - Key: owner
          Value: !Ref owner

  ALB:
    Type: AWS::ElasticLoadBalancingV2::LoadBalancer
    Properties:
      Name: !Sub "${project}-${environment}-alb"
      Scheme: internet-facing
      Subnets:
        - !ImportValue
          Fn::Sub: "${project}-${environment}-public-subnet1-id"
        - !ImportValue
          Fn::Sub: "${project}-${environment}-public-subnet2-id"
      SecurityGroups:
        - !Ref ALBSecurityGroup
      LoadBalancerAttributes:
        - Key: idle_timeout.timeout_seconds
          Value: "60"
      Tags:
        - Key: project
          Value: !Ref project
        - Key: environment
          Value: !Ref environment
        - Key: owner
          Value: !Ref owner

  ALBTargetGroup:
    Type: AWS::ElasticLoadBalancingV2::TargetGroup
    Properties:
      Name: !Sub "${project}-${environment}-tg"
      Protocol: HTTP
      Port: 5000
      VpcId: !ImportValue
        Fn::Sub: "${project}-${environment}-vpc-id"
      TargetType: ip
      HealthCheckPath: /
      HealthCheckProtocol: HTTP
      Matcher:
        HttpCode: 200
      Tags:
        - Key: project
          Value: !Ref project
        - Key: environment
          Value: !Ref environment
        - Key: owner
          Value: !Ref owner

  ALBListener:
    Type: AWS::ElasticLoadBalancingV2::Listener
    Properties:
      DefaultActions:
        - Type: forward
          TargetGroupArn: !Ref ALBTargetGroup
      LoadBalancerArn: !Ref ALB
      Port: 80
      Protocol: HTTP

  ECSService:
    Type: AWS::ECS::Service
    DependsOn: ALBListener
    Properties:
      ServiceName: !Sub "${project}-${environment}-app-service"
      Cluster: !Ref ECSCluster
      TaskDefinition: !Ref TaskDefinition
      DesiredCount: 2
      LaunchType: FARGATE
      DeploymentConfiguration:
        MaximumPercent: 200
        MinimumHealthyPercent: 50
        DeploymentCircuitBreaker:
          Enable: true
          Rollback: true
      NetworkConfiguration:
        AwsvpcConfiguration:
          Subnets:
            - !ImportValue
              Fn::Sub: "${project}-${environment}-private-subnet1-id"
            - !ImportValue
              Fn::Sub: "${project}-${environment}-private-subnet2-id"
          SecurityGroups:
            - !Ref AppSecurityGroup
          AssignPublicIp: DISABLED
      LoadBalancers:
        - TargetGroupArn: !Ref ALBTargetGroup
          ContainerName: !Sub "${project}-${environment}-container"
          ContainerPort: 5000
      Tags:
        - Key: project
          Value: !Ref project
        - Key: environment
          Value: !Ref environment
        - Key: owner
          Value: !Ref owner

Outputs:
  ecsClusterName:
    Description: Name of the ECS Cluster
    Value: !Ref ECSCluster
    Export:
      Name: !Sub "${project}-${environment}-ecs-cluster-name"

  ecsServiceName:
    Description: Name of the ECS Service
    Value: !GetAtt ECSService.Name
    Export:
      Name: !Sub "${project}-${environment}-ecs-service-name"

  albdnsName:
    Description: DNS Name of the Application Load Balancer
    Value: !GetAtt ALB.DNSName
    Export:
      Name: !Sub "${project}-${environment}-alb-dns-name"

  albUrl:
    Description: URL of the Application Load Balancer
    Value: !Sub "http://${ALB.DNSName}"
    Export:
      Name: !Sub "${project}-${environment}-alb-url"

  appTaskDefinitionArn:
    Description: ARN of the ECS Task Definition
    Value: !Ref TaskDefinition
    Export:
      Name: !Sub "${project}-${environment}-app-task-definition-arn"
